<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@android:color/white"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_close_black_24dp"
                android:tint="@android:color/black" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress"
                style="@style/IndeterminateProgressStyle"
                android:layout_gravity="center"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/lnDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvName"
                    style="@style/Heading_6"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    tools:text="Renz Manacmol" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvBio"
                    style="@style/Subscript_1"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    tools:text="@string/string_bio" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:elevation="1dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_account_circle_black_24dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/login"
                            style="@style/Subscript_1"
                            android:layout_marginEnd="15dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            tools:text="@string/string_mock_name" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/siteadmin"
                            style="@style/Subscript_1"
                            android:layout_marginEnd="15dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/rounded_corner"
                            android:paddingEnd="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/string_mock_review"
                            android:textColor="@android:color/white"
                            android:visibility="gone" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:elevation="1dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_location_on_black_24dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/location"
                        style="@style/Subscript_1"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="5dp"
                        tools:text="@string/string_mock_location" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:elevation="1dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_web_black_24dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/blog"
                        style="@style/Subscript_1"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorAdmin"
                        tools:text="@string/string_mock_blog" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>